--- a/src/app/lazy-modules/sidebar-left/components/sidebar-left/sidebar-left.component.html
+++ b/src/app/lazy-modules/sidebar-left/components/sidebar-left/sidebar-left.component.html
@@ -1,14 +1,17 @@
-﻿<match-calendar></match-calendar>
-<best-player></best-player>
-<a role="button" mat-raised-button class="full-width color-gold color-back-maroon" routerLink="/transfers/current"><b>Трансферы</b></a>
-<epl-table></epl-table>
-<cup-table></cup-table>
-<section class="full-width top10">
-    <person-birthday></person-birthday>
-</section>
-<section>
-    <injury-current-list></injury-current-list>
-</section>
-<div id="goToTop" class="hidden">
-    <button mat-raised-button class="top color-gold color-back-maroon" (click)="goToTop()">НАВЕРХ</button>
-</div>
+﻿<ng-container *ngIf="{ nextMatch: nextMatch$ | async,
+     lastMatch: lastMatch$ | async } as data">
+    <match-calendar [next]="data.nextMatch" [last]="data.lastMatch"></match-calendar>
+    <best-player></best-player>
+    <a role="button" mat-raised-button class="full-width color-gold color-back-maroon" routerLink="/transfers/current"><b>Трансферы</b></a>
+    <epl-table></epl-table>
+    <cup-table></cup-table>
+    <section class="full-width top10">
+        <person-birthday></person-birthday>
+    </section>
+    <section>
+        <injury-current-list></injury-current-list>
+    </section>
+    <div id="goToTop" class="hidden">
+        <button mat-raised-button class="top color-gold color-back-maroon" (click)="goToTop()">НАВЕРХ</button>
+    </div>
+</ng-container>
