--- a/src/app/matches/pages/match-edit/match-edit.component.html
+++ b/src/app/matches/pages/match-edit/match-edit.component.html
@@ -8,7 +8,9 @@
             </mat-select>
         </mat-form-field>
 
-        <select-season-form-field formControlName="seasonId" [seasonName]="editMatchForm.get('seasonName').value">
+        <select-season-form-field formControlName="seasonId"
+        [placeholder]="'Сезон (если пустое, то текущий сезон)'" [seasonName]="editMatchForm.get('seasonName').value"
+        (clearSeason)="onClearSeason($event)">
         </select-season-form-field>
 
         <div class="full-width text-center">
@@ -17,7 +19,8 @@
             </mat-slide-toggle>
         </div>
         <mat-form-field class="full-width">
-            <input matInput placeholder="Стадион" [matAutocomplete]="stadium" formControlName="stadiumName">
+            <input matInput placeholder="Стадион (если пустое, то стадион домашней команды)"
+             [matAutocomplete]="stadium" formControlName="stadiumName">
             <mat-autocomplete #stadium="matAutocomplete">
                 <mat-option *ngFor="let stadium of stadiums$ | async" [value]="stadium.name"
                     (click)="selectStadium(stadium.id)">
