--- a/src/app/widgets/non-http/crop-image-form-field/crop-image-form-field/crop-image-form-field.component.html
+++ b/src/app/widgets/non-http/crop-image-form-field/crop-image-form-field/crop-image-form-field.component.html
@@ -10,6 +10,7 @@
                    [resizeToWidth]="150"
                    [aspectRatio]="1 / 1"
                    format="jpeg"
+                   output="base64"
                    (imageCropped)="imageCropped($event)"></image-cropper>
     <button mat-raised-button color="warn" *ngIf="imageChangedEvent" (click)="crop()" type="button">Обрезать</button>
 </div>
